10 Aug 2009 (svn.debian.org/tux4kids -revision 1408)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Test for the new wordlist function is now centered
	-pressing cancel now redraws the screen

10 Aug 2009 (svn.debian.org/tux4kids -revision 1407)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Left and right arrows now show up
	-adding a word list now checks for empty wordlists

10 Aug 2009 (svn.debian.org/tux4kids -revision 1406)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Screen is redrawn properly after a wordlist is added/deleted

9 Aug 2009 (svn.debian.org/tux4kids -revision 1405)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Bus error bug is fixed.  Final cosmetic issues should be fixed tomorrow.

5 Aug 2009 (svn.debian.org/tux4kids -revision 1365)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Program now successfully creates/removes/changes files
	-Bug to be fixed: program crashes at the end of NewWordList(),
	however, it does save the new word list.

4 Aug 2009 (svn.debian.org/tux4kids -revision 1361)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Worked on drawing issues in NewWordList()
	- Need to fix a bug where after typing in NewWordList(), program
	crashes when pressing cancel/save
	- Need to make program save when pressing ENTER or 'OK', however
	trying to fix above bug first

3 Aug 2009 (svn.debian.org/tux4kids -revision 1350)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Filled out functionality in the creating new wordlist
	function, however as of yet it does not actually save the wordlist
	and there are several bugs to fix.  However, basic functionality
	is there.

3 Aug 2009 (svn.debian.org/tux4kids -revision 1349)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Worked on removing file function.  Currently doesn't work.

3 Aug 2009 (svn.debian.org/tux4kids - revision 1348)
[Sarah Frisk <ssfrisk@gmail.com> ]
	- Fixed drawing issues.  Program now correctly loads Word List Editor Main screen
	after going to the word list editor and/or using various other buttons (New Word 
	List)
