@@ -1,3 +1,8 @@
+10 Aug 2009 (svn.debian.org/tux4kids -revision 1411)
+[Sarah Frisk <ssfrisk@gmail.com> }
+	-Clarified directions in NewWordList()
+	-Clarified RemoveWordlist() functionality
+	
 10 Aug 2009 (svn.debian.org/tux4kids -revision 1408)
 [Sarah Frisk <ssfrisk@gmail.com> }
 	-Test for the new wordlist function is now centered
